Add python.ipynb and py

--- a/python.ipynb
+++ b/python.ipynb
@@ -176,21 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "John your age 25, your weight is 55.6\n",
-      "John your age 25, your weight is 55.600000\n",
-      "John your age 25, your weight is 55.60\n",
-      "John your age 25, your weight is 55.6\n",
-      "John your age 29, your weight is 55.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# String Formatting\n",
     "name = 'John'\n",
@@ -226,16 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "9"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,9 +234,208 @@
     "2+3     # Addition\n",
     "3-2     # Deduction\n",
     "3*2     # Multiplacation \n",
-    "3/2     # Division\n",
-    "3//2    # Bubtruction\n",
-    "3%2     # Remainder\n"
+    "3/2     # Floating point Division\n",
+    "3//2    # Intiger point Division\n",
+    "3%2     # Remainder\n",
+    "3 ** 2  # Power calculation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Comparison Operator\n",
+    "2 > 3   # 2 > 3 is False\n",
+    "2 < 3   # 2 < 3 is True\n",
+    "2 == 3  # 2 == 3 is False\n",
+    "2 != 3  # 2 !> 3 is True\n",
+    "2 >= 2  # 2 >= 3 is True\n",
+    "3 <= 2  # 2 <= 2 is False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Logical Operators\n",
+    "True and True   # True and True returen True\n",
+    "True and False  # True and False return False\n",
+    "False and True  # False and True return False\n",
+    "False and False # False and False return False\n",
+    "\n",
+    "True or True    # True or True return True\n",
+    "True or False   # True or False return True\n",
+    "False or True   # False or True returen True\n",
+    "\n",
+    "not True        # not True return False\n",
+    "not False       # not False return True\n",
+    "\n",
+    "## for Credit card\n",
+    "age=18\n",
+    "salary = 40000\n",
+    "\n",
+    "(age>=18) and (salary >= 40000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Special Opertor\n",
+    "\"h\" in \"happy\"  # if 'h' is found in 'happy' then return True\n",
+    "\"u\" in \"happy\"  # if 'u' is not found in 'happy' then return False\n",
+    "\n",
+    "# is Operator\n",
+    "2 == 2      # 2 is equelto 2 return True\n",
+    "2 == 2.00   # 2 is equelto 2.00 return True, though it's type is different\n",
+    "print(2 is 2.00)    # 2 is 2.00 return False, as the type is different\n",
+    "print (2 is 2)      # 2 is 2 return True, as type is also same"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Assignment Operator / Day - 1, Time - \n",
+    "n = 2       # We assign the value of n is 2\n",
+    "#n = n + 2   # Now we add 2 with n, then then n will return 4\n",
+    "#n += 2      # It also return the value 4 as above, which is the short form of n = n + 2\n",
+    "#n -= 2      # When the n value is 2 then deduce 2 and return 0\n",
+    "n *= 2      # Return 4\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['False',\n",
+       " 'None',\n",
+       " 'True',\n",
+       " 'and',\n",
+       " 'as',\n",
+       " 'assert',\n",
+       " 'async',\n",
+       " 'await',\n",
+       " 'break',\n",
+       " 'class',\n",
+       " 'continue',\n",
+       " 'def',\n",
+       " 'del',\n",
+       " 'elif',\n",
+       " 'else',\n",
+       " 'except',\n",
+       " 'finally',\n",
+       " 'for',\n",
+       " 'from',\n",
+       " 'global',\n",
+       " 'if',\n",
+       " 'import',\n",
+       " 'in',\n",
+       " 'is',\n",
+       " 'lambda',\n",
+       " 'nonlocal',\n",
+       " 'not',\n",
+       " 'or',\n",
+       " 'pass',\n",
+       " 'raise',\n",
+       " 'return',\n",
+       " 'try',\n",
+       " 'while',\n",
+       " 'with',\n",
+       " 'yield']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## To show the list of Keyword, Day-1, Time- 1:26.48\n",
+    "import keyword\n",
+    "keyword.kwlist  # Every keyword has it own function among them some of the function we already have used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Advance Data Type,   Day-2, Time- 00.01\n",
+    "\n",
+    "## List\n",
+    "studs = [5,1,3,4,5,76,7,8,9,'CSE', True, 5.6]   # List variable, where we can storoe the data efficiently\n",
+    "studs           # We can print it directly or use print(studs) as well\n",
+    "\n",
+    "# We may access this list data, suppose we want to use 1 from the list, then how?\n",
+    "# we know that list values have index number which is started from 0, then\n",
+    "# if we want to use 5, that means, we would going to use index 0\n",
+    "studs[0] \n",
+    "# if we want to get 76 then what to do... we need to know the index no. of 76\n",
+    "# that is 5, so\n",
+    "studs[5]    # Then return 76. If we want to get the last value like 5.6 then\n",
+    "            # we need to know the index no. of 5.6. But is difficult when the list\n",
+    "            # will be large, so, a shortcut method is there like\n",
+    "studs[-1]\n",
+    "studs[-2]   # 2nd last value will be returned\n"
    ]
   }
  ],
