--- a/python.ipynb
+++ b/python.ipynb
@@ -404,22 +404,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "[5, 1, 33, 45, 76, 7, 8, 9, 'CSE', True, 5.6]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "## Advance Data Type,   Day-2, Time- 00.01\n",
+    "\n",
+    "# There are four collection data types in the Python programming language:\n",
+    "\n",
+    "# List is a collection which is ordered and changeable. Allows duplicate members.\n",
+    "# Tuple is a collection which is ordered and unchangeable. Allows duplicate members.\n",
+    "# Set is a collection which is unordered, unchangeable*, and unindexed. No duplicate members.\n",
+    "# Dictionary is a collection which is ordered** and changeable. No duplicate members.\n",
+    "\n",
+    "# *Set items are unchangeable, but you can remove and/or add items whenever you like.\n",
+    "\n",
     "\n",
     "## List\n",
     "studs = [5,1,3,4,5,76,7,8,9,'CSE', True, 5.6]   # List variable, where we can storoe the data efficiently\n",
@@ -435,7 +445,214 @@
     "            # we need to know the index no. of 5.6. But is difficult when the list\n",
     "            # will be large, so, a shortcut method is there like\n",
     "studs[-1]\n",
-    "studs[-2]   # 2nd last value will be returned\n"
+    "studs[-2]   # 2nd last value will be returned\n",
+    "studs[2:5]  # If we want to get the index 2 to 4 then we use this, we use index 5\n",
+    "            # due to the list ignore last index number\n",
+    "studs[:6]   # If we get from starting to index 5 then we will use it\n",
+    "studs[:]    # If we get all values in the list then we just mention :\n",
+    "studs[3:]   # If we want to get the list from index 3 to last index\n",
+    "studs[::2]  # if we like to get values skipping 2 index\n",
+    "studs[2::2] # if we like to get the list from index 2 and with 1 inverval\n",
+    "studs[2:10:2] # if means that start from index 2 to index 10 with 1 inderval\n",
+    "studs[::-1]   # if we atart from last to fast, then we will use this\n",
+    "\n",
+    "## On String\n",
+    "\"Python\"[:]     # return 'Python\n",
+    "\"Python\"[::-1]  # return 'nohtyP'\n",
+    "\n",
+    "## Updating\n",
+    "studs[3] = 44   # Update 4 which is index 3 with 44\n",
+    "studs[2:5] = 33,45,111  # Update index 2 to 5 with 33,45,111\n",
+    "studs\n",
+    "#It is not not possible to update string value using index\n",
+    "\n",
+    "# Function\n",
+    "studs.append(6.6)   # 6.6 will be append at the end of the list\n",
+    "studs.insert(0,99)  # Add value like 99 on 0 index as we mention index no. 0\n",
+    "studs\n",
+    "# pop() Function delete the last value from the list\n",
+    "studs.pop()\n",
+    "studs.pop(0) # If we want to delete value against particular index, then we should use this\n",
+    "studs.remove(111)   # Remove function work on value. \n",
+    "studs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## tuple,  Day-1, Time- 38:50\n",
+    "t = (5, 1, 33, 45, 76, 7, 8, 9, 'CSE', True, 5.6) # Denote tuple by ()\n",
+    "# What difference between tuple and list? we can use index, and return values\n",
+    "# but we can not append, remove values from the tuple. We can only use count, index\n",
+    "# and access the values from the tuple\n",
+    "# But we want to delete the tuple, that can be possible\n",
+    "t\n",
+    "t[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Set, Da-1,  Time- 41:0\n",
+    "s1 = {10,2,3,3,4,5,7,8}    # Set exclude duplicate value and always make\n",
+    "                        # the valaues in ascending order. we can not use index \n",
+    "s2 = {2,3,4,11,12}      # We can use another set\n",
+    "s1.difference(s2)       # Return only the those values which is in s1\n",
+    "                        # but not in s2\n",
+    "s2.difference(s1)       # Return 11, 12 as these values are in s2 only\n",
+    "s1.intersection(s2)     # Return only common value between s1 and s2\n",
+    "s1.union(s2)            # marge unique values between two sets\n",
+    "s1.union(s2).union({13,14,5}) # We can union more then 2 sets as well\n",
+    "\n",
+    "## Set\n",
+    " # Sets are basically an organized collection of objects. Sets can be \n",
+    " # either represented in roster form or set builder form. The objects \n",
+    " # that a set consists of are known as the elements of the set. These \n",
+    " # elements can be grouped to form a subset of the original set. \n",
+    " # For e.g. if ‘a’ is an element of set A, this is represented as:\n",
+    "\n",
+    " #a ∈ A , where ∈ means “belongs to”\n",
+    "\n",
+    " # On the other hand, if ‘b’ is not an element of A, we represent it as:\n",
+    "\n",
+    " # b ∉ A, where ∉ means “doesn’t belong to”\n",
+    "\n",
+    "## Sub Set\n",
+    "## In mathematics, set A is a subset of a set B if all elements of A are \n",
+    " # also elements of B; B is then a superset of A. It is possible for A \n",
+    " # and B to be equal; if they are unequal, then A is a proper subset of B. \n",
+    " # The relationship of one set being a subset of another is called inclusion \n",
+    " # (or sometimes containment).\n",
+    "s3 = {10,2,3,3,4,5,7,8, 88,99}\n",
+    "s3\n",
+    "s1.issubset(s3)     # s1 is subset of s3 return true. It means that s1 ∈ s3 (s1 belongs to s3)\n",
+    "s1.issuperset(s3)   # s1 is not superset of s3, return False. It means that s1 ∈ s3 (s1 belongs to s3)\n",
+    "s1.pop()            # Remove from the front. But remove value from last in list\n",
+    "s1.remove(8)        # Remove the particular value\n",
+    "s1.add(88)          # Add value at the last\n",
+    "s1.update(1,2,99)  # Update set wtih another set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys([1, 'Branch', 'Age', 'Marks', 'subs'])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Dictionary, Day- 2, Time: 55:50\n",
+    "sd = {1:\"John\",\"Branch\":\"CSE\",\"Age\":24,\"Marks\":86}\n",
+    "    # |   |____ value\n",
+    "    # |________ key\n",
+    "sd[\"subs\"] = ['Math','English'] # Add a column with two values\n",
+    "sd.get('Age')\n",
+    "sd.items()\n",
+    "sd.values()\n",
+    "sd.keys()\n",
+    "sd.\n",
+    "# Methods in Dictionary\n",
+    "# Method\t     Description\n",
+    "sd.copy()      # Returns a copy of the dictionary\n",
+    "sd.fromkeys()  # Returns a dictionary with the specified keys and value\n",
+    "sd.get()       # Returns the value of the specified key\n",
+    "sd.items()     # Returns a list containing a tuple for each key value pair\n",
+    "sd.keys()      # Returns a list containing the dictionary's keys\n",
+    "sd.pop()       # Removes the element with the specified key\n",
+    "sd.popitem()   # Removes the last inserted key-value pair\n",
+    "sd.setdefault() # Returns the value of the specified key. If the key does not exist: insert the key, with the specified value\n",
+    "sd.update()    # Updates the dictionary with the specified key-value pairs\n",
+    "sd.values()    # Returns a list of all the values in the dictionary\n",
+    "sd.clear()     # Removes all the elements from the dictionary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Loop\n",
+    "# A for loop is used for iterating over a sequence (that is either \n",
+    "# a list, a tuple, a dictionary, a set, or a string). This is less \n",
+    "# like the for keyword in other programming languages, and works more \n",
+    "# like an iterator method as found in other object-orientated programming \n",
+    "# languages.\n",
+    "\n",
+    "# While Loop   \n",
+    "# With the while loop we can execute a set of statements as long as \n",
+    "# a condition is true. Example. Print i as long as i is less than 6: \n",
+    "# i = 1 while i < ...\n",
+    "biscuit_eaten = 0\n",
+    "while biscuit_eaten < 6:\n",
+    "    print(\"Eat one bischuit\",biscuit_eaten)\n",
+    "    biscuit_eaten += 1\n",
+    "\n",
+    "# for loop\n",
+    "#A for loop is used for iterating over a sequence \n",
+    "# (that is either a list, a tuple, a dictionary, a set, or a string).\n",
+    "\n",
+    "# This is less like the for keyword in other programming languages, \n",
+    "# and works more like an iterator method as found in other \n",
+    "# object-orientated programming languages.\n",
+    "\n",
+    "# With the for loop we can execute a set of statements, once for \n",
+    "# each item in a list, tuple, set etc.\n",
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "for x in fruits:\n",
+    "  print(x)\n",
+    "\n",
+    "for s in s1:\n",
+    "    print(s)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Branch\n",
+      "Age\n",
+      "Marks\n",
+      "subs\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d in sd:\n",
+    "  print(d)"
    ]
   }
  ],
