Add python.ipynb and py

--- a/python.ipynb
+++ b/python.ipynb
@@ -348,54 +348,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['False',\n",
-       " 'None',\n",
-       " 'True',\n",
-       " 'and',\n",
-       " 'as',\n",
-       " 'assert',\n",
-       " 'async',\n",
-       " 'await',\n",
-       " 'break',\n",
-       " 'class',\n",
-       " 'continue',\n",
-       " 'def',\n",
-       " 'del',\n",
-       " 'elif',\n",
-       " 'else',\n",
-       " 'except',\n",
-       " 'finally',\n",
-       " 'for',\n",
-       " 'from',\n",
-       " 'global',\n",
-       " 'if',\n",
-       " 'import',\n",
-       " 'in',\n",
-       " 'is',\n",
-       " 'lambda',\n",
-       " 'nonlocal',\n",
-       " 'not',\n",
-       " 'or',\n",
-       " 'pass',\n",
-       " 'raise',\n",
-       " 'return',\n",
-       " 'try',\n",
-       " 'while',\n",
-       " 'with',\n",
-       " 'yield']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## To show the list of Keyword, Day-1, Time- 1:26.48\n",
     "import keyword\n",
@@ -594,9 +549,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eat one bischuit 0\n",
+      "Eat one bischuit 1\n",
+      "Eat one bischuit 2\n",
+      "Eat one bischuit 3\n",
+      "Eat one bischuit 4\n",
+      "Eat one bischuit 5\n"
+     ]
+    }
+   ],
    "source": [
     "## Loop\n",
     "# A for loop is used for iterating over a sequence (that is either \n",
@@ -612,8 +580,37 @@
     "biscuit_eaten = 0\n",
     "while biscuit_eaten < 6:\n",
     "    print(\"Eat one bischuit\",biscuit_eaten)\n",
-    "    biscuit_eaten += 1\n",
-    "\n",
+    "    biscuit_eaten += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = [\"John\", \"Bappy\", \"Tasmin\", \"Zahid\", \"Sajid\", \"Shihab\"]\n",
+    "index = 0\n",
+    "while index < len(s):\n",
+    "    if s[index] == 'Zahid':\n",
+    "        print(index+1)\n",
+    "    index += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# for loop\n",
     "#A for loop is used for iterating over a sequence \n",
     "# (that is either a list, a tuple, a dictionary, a set, or a string).\n",
@@ -624,36 +621,64 @@
     "\n",
     "# With the for loop we can execute a set of statements, once for \n",
     "# each item in a list, tuple, set etc.\n",
-    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
-    "for x in fruits:\n",
-    "  print(x)\n",
     "\n",
-    "for s in s1:\n",
-    "    print(s)\n",
-    "\n"
+    "# for statement in \n",
+    "\n",
+    "for student in s:\n",
+    "  print(student)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "Branch\n",
-      "Age\n",
-      "Marks\n",
-      "subs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for d in sd:\n",
-    "  print(d)"
+    "for student in s:\n",
+    "    if student == \"Zahid\":\n",
+    "      print(s.index(student)+1)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for num in range(1,10):\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for keys, val in sd.items():\n",
+    "    print(keys, val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Want to show only values\n",
+    "for key in sd.keys():\n",
+    "    print(key)\n",
+    "print('----Seperator---------')\n",
+    "for val in sd.values():\n",
+    "    print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
