--- a/python.ipynb
+++ b/python.ipynb
@@ -675,10 +675,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2], [2, 3]]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Dulti-Dimentional Data\n",
+    "data = [[1,2], \n",
+    "        [2,3]\n",
+    "        ]\n",
+    "data\n",
+    "\n",
+    "for num in range(1,10):\n",
+    "    if num%2=0:\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 27, 16, 125]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## List Comprehension, one of the most powerfull \n",
+    "# Normal way\n",
+    "ls = []\n",
+    "for num in range(1,6):\n",
+    "    if num%2 ==0:\n",
+    "        ls.append(num**2)\n",
+    "    else:\n",
+    "        ls.append(num**3)\n",
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## in List Comprehension\n",
+    "ls = [num**2 for num in range(1,6)]\n",
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List Comprehension\n",
+    "ls = [num**2 for num in range(1,6)]\n",
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 16]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#if we want to return square for even number then\n",
+    "ls = [num**2 for num in range(1,6) if num%2 == 0]\n",
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 27, 16, 125]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#if we want to return square for even number then\n",
+    "ls = [num**2 if num%2 == 0 else num**3 for num in range(1,6) ]\n",
+    "\n",
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 4, 27, 16, 125)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can use this for tuple as well\n",
+    "ls = (num**2 if num%2 == 0 else num**3 for num in range(1,6))\n",
+    "tuple(ls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1, 2: 4, 3: 27, 4: 16, 5: 125}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use in Dictionary, Day-3, time- 1>03\n",
+    "# The 'num' variable will will represent the keys and \n",
+    "# square or cube will represent the values\n",
+    "ls = {num:num**2 if num%2 == 0 else num**3 for num in range(1,6)}\n",
+    "ls\n"
+   ]
   }
  ],
  "metadata": {
