Add python.ipynb and py

--- a/python.ipynb
+++ b/python.ipynb
@@ -864,6 +864,45 @@
     "ls = {num:num**2 if num%2 == 0 else num**3 for num in range(1,6)}\n",
     "ls\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Open the Door\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Day - 4\n",
+    "# Problem 1: Smart Door Password\n",
+    "# OrgPassword = \"opendoor\"\n",
+    "# User will proved some passwords\n",
+    "# Check password and open the door\n",
+    "# If password is wrong then \"Worng Password and Try again\" \n",
+    "# If the user provides wrong password more then 3 times\n",
+    "# \"Door Locked, You are not authorised person\"\n",
+    "\n",
+    "OrgPassword = \"opendoor\"\n",
+    "maxTry = 0\n",
+    "while True:\n",
+    "    password = input(\"Enter Your Password \")\n",
+    "    if password == OrgPassword:\n",
+    "        print(\"Open the Door\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Your Password is Worng, Try Again....\")\n",
+    "        maxTry += 1\n",
+    "        if maxTry == 3:\n",
+    "            print(\"Door Locked, You are not authorised person\")\n",
+    "            maxTry = 0\n",
+    "            break\n"
+   ]
   }
  ],
  "metadata": {
