--- a/python.ipynb
+++ b/python.ipynb
@@ -903,6 +903,71 @@
     "            maxTry = 0\n",
     "            break\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Function\n",
+    "# In Python, a function is a group of related statements that performs \n",
+    "# a specific task. Functions help break our program into smaller and \n",
+    "# modular chunks. As our program grows larger and larger, functions \n",
+    "# make it more organized and manageable. Furthermore, it avoids \n",
+    "# repetition and makes the code reusable.\n",
+    "\n",
+    "def evens() -> None:\n",
+    "    for num in range(10):\n",
+    "        if num%2 == 0:\n",
+    "            print(num**2)\n",
+    "evens()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evens()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evens() -> list:\n",
+    "    e = []\n",
+    "    for num in range(10):\n",
+    "        if num%2 == 0:\n",
+    "            e.append(num**2)\n",
+    "        else:\n",
+    "            e.append(num**3)\n",
+    "    return e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 27, 16, 125, 36, 343, 64, 729]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evens()"
+   ]
   }
  ],
  "metadata": {
